--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Welcome to my ICSpark Final Project Website!</h1>
+    <h1>Welcome to Robert's ICSpark Final Project Website!</h1>
     
     <p>
         Before you begin working on your final project, take the time to try and think of what you want your final project to be! 
