--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
     <h1> Sup, welcome to my watermelon eating simulater </h1> 
-<img src="watermelon.jpg"
+<img src="watermelon.jpg" style="width:600px;height:600px;" id= "watermelon" >
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
 </body>
