--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head> 
     <h1> Sup, welcome to my watermelon eating simulater </h1> 
-<img src="watermelon.jpg" style="width:600px;height:600px;" id= "watermelon" >
-
+<input type="image" src="watermelon.jpg" name="saveForm"  id="yummy" />
     <script src="script.js"></script> 
 </body>
