made replacment image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head> 
     <h1> Sup, welcome to my watermelon eating simulater </h1> 
-<input type="image" src="watermelon.jpg" name="saveForm"  id="yummy" />
     <script src="script.js"></script> 
-</body>
+<link rel="stylesheet" href="style.css">
+    <div class="button-container">
+        <button class="img-button" id="demo" onClick="myFunction()">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.jTlEdZnk9Y8YdguMEnSZbgHaF7%26pid%3DApi&f=1&ipt=8b931654bc5ac2788987e62b874d3fdc4a7852d1d93373b06a93ec9cac7de5fd&ipo" alt="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.idwBTQPQzYnLgrelpWDAywHaDR%26pid%3DApi&f=1&ipt=827e79a5cbe13c1dfaa98b653f5026722cc65b6b84f8f9ef10d248febcb76cd5&ipo=images">
+        </button>
+        
+        <div id="text" class="text-click">Yummy!</div>
+      </div>
+    
