--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <h1> Sup, welcome to my watermelon eating simulater </h1> 
+    <h1> Sup, welcome to my watermelon eating simulater!
+         Eat up! </h1> 
     <script src="script.js"></script> 
 <link rel="stylesheet" href="style.css">
     <div class="button-container">
@@ -10,5 +11,3 @@
         </button>
         
         <div id="text" class="text-click">Yummy!</div>
-      </div>
-    
